fix broken button spacing

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,7 @@
 /* Home Page & Universal */
+*{
+    align-items: center;
+}
 
 .headshot {
     align-items: right;
@@ -126,6 +129,11 @@ p {
     color: ghostwhite;
     overflow: hidden;
     margin-bottom: 5px;
+    width: 100px;
+    display: flex;
+    text-decoration: none;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .cssbuttons-io svg {
